--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,4 @@ pnpm-debug.log*
 backend/venv/
 
 backend/env/
-/backend/pgsql/bin/
-/backend/pgsql/symbols/
-/backend/pgsql/share/
-/backend/pgsql/StackBuilder/
-/backend/pgsql/pgAdmin 4/
-/backend/pgsql/doc/
-/backend/pgsql/lib/
-/backend/pgsql/include/
+/backend/pgsql/
