--- a/backend/nginx/default.conf
+++ b/backend/nginx/default.conf
@@ -1,33 +1,19 @@
-upstream back_store{
-    server back_store_web:8000;
-}
-
-
 server {
     listen 80;
     server_name localhost;
-
     client_max_body_size 100M;
     proxy_force_ranges on;
     max_ranges 100;
     add_header Accept-Range bytes;
 
-
-
     location / {
-    proxy_ignore_client_abort on;
-    proxy_pass http://back_store;
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+    try_files $uri /index.html;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
     proxy_redirect off;
     }
 
-    location /static/{
-        alias /static/;
-    }
-
-    location /media/ {
-        alias /media/;
-    }
 
 }
