--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -5,6 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -name: clone code
-      uses: action/checkout@v2
+      uses: actions/checkout@v2
       -name: show dir
       run: ls -la
