--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,5 +6,7 @@ jobs:
     steps:
       - name: clone code
         uses: actions/checkout@v2
-      - name: show dir
-        run: ls -la
+      - name: build
+        run: docker-compose -f compose/docker-compose_prod.yml up --build -d
+      - name: docker ps
+        run: docker ps
