--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,5 +8,5 @@ jobs:
         uses: actions/checkout@v2
       - name: build
         run: docker-compose -f compose/docker-compose_prod.yml up --build -d
-      - name: docker ps
-        run: docker ps
+      - name: docker push
+        run: docker push ildar94/frontend:$GITHUB_REF_NAME-$GITHUB_RUN_ID
