--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,7 +4,7 @@ jobs:
   build_and_push:
     runs-on: ubuntu-latest
     steps:
-      - name: clone code
+      - name: Checkout
         uses: actions/checkout@v2
 
 
@@ -18,6 +18,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          file: ./Dockerfile
           push: true
           tags: ildar94/frontend:latest, ildar94/frontend:${{ github.run_number }}
           labels: ${{ steps.meta.outputs.labels }}
