test docker push 2

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,7 +18,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
+          file: frontend/Dockerfile
           push: true
           tags: ildar94/frontend:latest, ildar94/frontend:${{ github.run_number }}
           labels: ${{ steps.meta.outputs.labels }}
