--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,12 @@
-FROM node:latest  as build
+FROM node:latest
 WORKDIR /app
 EXPOSE 8080
 
 ARG NODE_ENV=development
 ENV NODE_ENV=${NODE_ENV}
 
-COPY package*.json ./
+COPY package.json ./
+COPY package-lock.json ./
 
 RUN npm install
 
