--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,10 +5,9 @@ EXPOSE 8080
 ARG NODE_ENV=development
 ENV NODE_ENV=${NODE_ENV}
 
-COPY package.json ./
-COPY package-lock.json ./
+COPY package*.json ./
 
-RUN npm install
+RUN npm ci
 
 COPY . .
 
