test docker push 11

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,22 +1,14 @@
 FROM node:latest
-WORKDIR ../usr/srv/app
+WORKDIR /app
 EXPOSE 8080
 
 
 COPY package*.json ../usr/srv/app
 
 
-RUN ls -la
+RUN pwd
 
-RUN ls -la ../
-
-RUN ls -la ../usr
-
-RUN ls -la ../usr/srv
-
-RUN ls -la ../usr/srv/app
-
-
+RUN ls
 
 RUN npm install
 
