test docker push 12

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,12 +3,19 @@ WORKDIR /app
 EXPOSE 8080
 
 
-COPY package*.json ../usr/srv/app
+COPY package*.json /app
 
 
 RUN pwd
 
-RUN ls
+RUN ls ../
+
+RUN pwd
+
+RUN ls -la /app
+
+RUN ls -la /app/
+
 
 RUN npm install
 
