--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,20 +1,20 @@
 FROM node:latest
-WORKDIR /app
+WORKDIR /usr/srv/app
 EXPOSE 8080
 
 
-COPY package*.json /app
+COPY package*.json /usr/srv/app/package*.json
 
 
 RUN pwd
 
-RUN ls ../
+RUN ls ../../
 
 RUN pwd
 
 RUN ls -la /app
 
-RUN ls -la /app/
+RUN ls -la /usr/srv/app/
 
 
 RUN npm install
