--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,10 +14,18 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: Build and push Frontend image
         uses: docker/build-push-action@v2
         with:
           context: .
           file: frontend/Dockerfile
           push: true
-          tags: ildar94/frontend:latest, ildar94/frontend:${{ github.run_number }}
+          tags: ildar94/frontend:${{ github.run_number }}
+
+      - name: Build and push Nginx image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: backend/nginx/Dockerfile
+          push: true
+          tags: ildar94/frontend:${{ github.run_number }}
