--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,18 +8,14 @@ jobs:
         uses: actions/checkout@v2
 
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+
+      - name: Deploy on Server
+        uses: appleboy/ssh-action@master
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-
-
-      - name: Build and push Nginx image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: backend/nginx/Dockerfile
-          push: true
-          tags: ildar94/nginx:${{ github.run_number }}
+          host: ${{ secrets.First_VDS_SSH_HOST }}
+          username: ${{ secrets.First_VDS_SSH_USERNAME }}
+          password: ${{ secrets.First_VDS_SSH_PASSWORD }}
+          port: ${{ secrets.First_VDS_SSH_PORT }}
+          script: |
+            pwd
+            ls -la
