--- a/frontend/Dockerfile_prod
+++ b/frontend/Dockerfile_prod
@@ -1,15 +1,11 @@
-FROM node:latest
-WORKDIR /usr/src/app
-EXPOSE 8080
-
-RUN cd /usr/src/app
-
-COPY package*.json .
-
-COPY . .
-
-
+FROM node:latest as build-stage
+WORKDIR /app
+COPY package*.json ./
 RUN npm install
+COPY ./ .
+RUN npm run build
 
-CMD ["npm", "run", "build"]
-
+FROM nginx as production-stage
+RUN mkdir /app
+COPY --from=build-stage /app/dist /app
+COPY nginx.conf /etc/nginx/nginx.conf
