--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -7,7 +7,7 @@ server {
     add_header Accept-Range bytes;
 
     location / {
-    root app/html;
+    root /app;
     index index.html index.htm;
     try_files $uri /index.html;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
