--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,13 +1,11 @@
 name: Build and deploy workflow
 on: [push]
 jobs:
-  build_and_push:
+  deploy_on_push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-
 
       - name: Deploy on Server
         uses: appleboy/ssh-action@v0.1.4
@@ -17,5 +15,7 @@ jobs:
           password: ${{ secrets.First_VDS_SSH_PASSWORD }}
           port: ${{ secrets.First_VDS_SSH_PORT }}
           script: |
-            pwd
-            ls -la
+            cd portfolio/compose
+            git pull
+            echo $ {{ secrets.First_VDS_SSH_PASSWORD }} | sudo -S docker-compose -f docker-compose_prod.yml up --build -d
+            sudo docker ps
