--- a/frontend/Dockerfile_prod
+++ b/frontend/Dockerfile_prod
@@ -1,5 +1,5 @@
 FROM node:latest as build-stage
-WORKDIR /app
+WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
 COPY ./ .
@@ -7,5 +7,5 @@ RUN npm run build
 
 FROM nginx as production-stage
 RUN mkdir /app
-COPY --from=build-stage /app/dist /app
+COPY --from=build-stage /app/dist /usr/src/app/html
 COPY default.conf /etc/nginx/conf.d
