--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,3 +1,6 @@
+upstream
+
+
 server {
     listen 80;
     server_name localhost;
@@ -7,7 +10,7 @@ server {
     add_header Accept-Range bytes;
 
     location / {
-    root /app;
+    root /app/html;
     index index.html index.htm;
     try_files $uri /index.html;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
