--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,4 +1,6 @@
-upstream
+upstream api {
+    server 127.0.0.0:8000;
+}
 
 
 server {
@@ -18,5 +20,21 @@ server {
     proxy_redirect off;
     }
 
+    location /api/ {
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_pass http://api/;
+    proxy_ssl_session_reuse off;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+    }
+
+    location /static/ {
+    alias /usr/src/app/static/
+    }
+
+    location /media/ {
+    alias /usr/src/app/media/
+    }
 
 }
