--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,18 +1,18 @@
 upstream api {
-    server 127.0.0.0:8000;
+    server http://127.0.0.0:8000;
 }
 
 
 server {
     listen 80;
-    server_name localhost;
+    server_name http://gilyazevs.ru/;
     client_max_body_size 100M;
     proxy_force_ranges on;
     max_ranges 100;
     add_header Accept-Range bytes;
 
     location / {
-    root /app/html;
+    root usr/src/app/html;
     index index.html index.htm;
     try_files $uri /index.html;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -30,11 +30,11 @@ server {
     }
 
     location /static/ {
-    alias /usr/src/app/static/
+    alias /usr/src/app/static;
     }
 
     location /media/ {
-    alias /usr/src/app/media/
+    alias /usr/src/app/media;
     }
 
 }
