--- a/compose/docker-compose_prod.yml
+++ b/compose/docker-compose_prod.yml
@@ -7,8 +7,8 @@ services:
       dockerfile: Dockerfile_prod
     container_name: frontend_prod
     volumes:
-      - static:/usr/src/app/static
-      - media:/usr/src/app/media
+      - static:/usr/share/nginx/static
+      - media:/usr/share/nginx/media
     ports:
       - 80:80
     expose:
