--- a/frontend/Dockerfile_prod
+++ b/frontend/Dockerfile_prod
@@ -7,5 +7,5 @@ RUN npm run build
 
 FROM nginx as production-stage
 RUN mkdir /app
-COPY --from=build-stage /app/dist /usr/src/app/html
+COPY --from=build-stage /app/dist /usr/share/nginx/html
 COPY default.conf /etc/nginx/conf.d
