--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -12,7 +12,7 @@ server {
     add_header Accept-Range bytes;
 
     location / {
-    root usr/share/nginx/html;
+    root /usr/share/nginx/html;
     index index.html index.htm;
     try_files $uri $uri/ index.html;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
