--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,5 +1,5 @@
 upstream api {
-    server 127.0.0.0:8000;
+    server backend_api:8000;
 }
 
 
@@ -12,7 +12,7 @@ server {
     add_header Accept-Range bytes;
 
     location / {
-    root /app/html;
+    root /usr/share/nginx/html;
     index index.html index.htm;
     try_files $uri /index.html;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -30,11 +30,11 @@ server {
     }
 
     location /static/ {
-    alias /usr/src/app/static/
+    alias /usr/src/app/static;
     }
 
     location /media/ {
-    alias /usr/src/app/media/
+    alias /usr/src/app/media;
     }
 
 }
