--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -20,7 +20,7 @@ server {
     proxy_redirect off;
     }
 
-    location /api/ {
+    location /api/v1/ {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_pass http://api/;
