--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -20,21 +20,29 @@ server {
     proxy_redirect off;
     }
 
-    location /api/v1/ {
-    proxy_set_header X-Real-IP $remote_addr;
+    location /api/ {
+    proxy_ignore_client_abort on;
+    proxy_pass http://api;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_pass http://api/;
-    proxy_ssl_session_reuse off;
-    proxy_set_header Host $http_host;
+    proxy_set_header Host $host;
     proxy_redirect off;
     }
 
+    location /admin/ {
+    proxy_ignore_client_abort on;
+    proxy_pass http://api;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_redirect off;
+    }
+
+
     location /static/ {
-    alias /usr/src/app/static;
+    alias /usr/share/nginx/static/;
     }
 
     location /media/ {
-    alias /usr/src/app/media;
+    alias /usr/share/nginx/media/;
     }
 
 }
