--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -10,6 +10,7 @@ server {
     proxy_force_ranges on;
     max_ranges 100;
     add_header Accept-Range bytes;
+    error_log /var/log/nginx/error.log debug;
 
     location / {
     root /usr/share/nginx/html;
