change upstream server name

--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,11 +1,11 @@
 upstream api {
-    server backend_api:8000;
+    server DRF:8000;
 }
 
 
 server {
     listen 80;
-    server_name gilyazevs.ru;
+    server_name localhost;
     client_max_body_size 100M;
     proxy_force_ranges on;
     max_ranges 100;
