--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -10,7 +10,7 @@ server {
     proxy_force_ranges on;
     max_ranges 100;
     add_header Accept-Range bytes;
-    error_log /var/log/nginx/error.log debug;
+
 
     location / {
     root /usr/share/nginx/html;
@@ -26,7 +26,7 @@ server {
 
     location /api/ {
     proxy_ignore_client_abort on;
-    proxy_pass http://api;
+    proxy_pass http://127.0.0.1:8000;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
     proxy_redirect off;
