--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -26,6 +26,7 @@ server {
 
     location /api/ {
     proxy_ignore_client_abort on;
+    include proxy_params;
     proxy_pass http://127.0.0.1:8000;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
