--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -5,7 +5,7 @@ upstream api {
 
 server {
     listen 80;
-    server_name localhost;
+    server_name gilyazevs.ru;
     client_max_body_size 100M;
     proxy_force_ranges on;
     max_ranges 100;
@@ -37,6 +37,8 @@ server {
     proxy_pass http://api;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Host $server_name;
+    proxy_set_header X-Real-IP $remote_addr;
     proxy_redirect off;
     }
 
