--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,5 +1,5 @@
 upstream api {
-    server 127.0.0.1:8000;
+    server  DRF:8000;
 }
 
 
@@ -26,7 +26,7 @@ server {
 
     location /api/ {
     proxy_ignore_client_abort on;
-    proxy_pass http://127.0.0.1:8000;
+    proxy_pass http://api;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
     proxy_redirect off;
