add allowed hosts

--- a/backend/back_store/.env.prod
+++ b/backend/back_store/.env.prod
@@ -18,7 +18,7 @@ SECRET_KEY = 'django-insecure-=%kowmuts&)&47gl9w-pu@tl!%wx@!#b*2zy9ydzbu7_0hu#xd
 
 
 
-DJANGO_ALLOWED_HOSTS = localhost 127.0.0.1 78.24.222.144 172.19.0.3 [::1]
+DJANGO_ALLOWED_HOSTS = gilyazevs.ru localhost 127.0.0.1 [::1]
 
 
 
