--- a/compose/docker-compose_dev.yml
+++ b/compose/docker-compose_dev.yml
@@ -31,8 +31,17 @@ services:
       - 5432:5432
 
 
+  redis:
+    restart: always
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - redisdata:/data
+
 volumes:
   static:
   media:
+  redisdata:
   pgdata_dev:
     external: true
