--- a/compose/docker-compose_dev.yml
+++ b/compose/docker-compose_dev.yml
@@ -11,6 +11,8 @@ services:
     volumes:
       - static:/usr/src/app/static
       - media:/usr/src/app/media
+    environment:
+      - REDIS_HOST=redis
     ports:
       - 8000:8000
     env_file:
