--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -4,13 +4,23 @@ upstream api {
 
 
 server {
+    listen 443 ssl;
     listen 80;
     server_name gilyazevs.ru;
+    ssl_certificate /etc/nginx/ssl/gilyazevs.ru.crt;
+    ssl_certificate_key /etc/nginx/ssl/gilyazevs.ru.key;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    keepalive_timeout 70;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_stapling on;
+    ssl_trusted_certificate /etc/ssl/certificate_ca.crt;
+    resolver 8.8.8.8;
     client_max_body_size 100M;
     proxy_force_ranges on;
     max_ranges 100;
     add_header Accept-Range bytes;
-
 
     location / {
     root /usr/share/nginx/html;
@@ -52,3 +62,6 @@ server {
     }
 
 }
+
+
+
