--- a/compose/docker-compose_prod.yml
+++ b/compose/docker-compose_prod.yml
@@ -24,6 +24,8 @@ services:
     container_name: DRF
     restart: always
     command: bash entrypoint_prod.sh
+    environment:
+      - REDIS_HOST=redis
     volumes:
       - static:/usr/src/app/static
       - media:/usr/src/app/media
@@ -48,6 +50,14 @@ services:
       - 5432:5432
 
 
+  redis:
+    restart: always
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
 volumes:
   pgdata:
     external: true
@@ -55,4 +65,4 @@ volumes:
   media:
   ssl_nginx:
     external: true
-
+  redis_data:
