--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -15,7 +15,7 @@ server {
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_prefer_server_ciphers on;
     ssl_stapling on;
-    ssl_trusted_certificate /etc/ssl/certificate_ca.crt;
+    ssl_trusted_certificate /etc/nginx/ssl/certificate_ca.crt;
     resolver 8.8.8.8;
     client_max_body_size 100M;
     proxy_force_ranges on;
