add redirect to nginx

--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -21,6 +21,7 @@ server {
     proxy_force_ranges on;
     max_ranges 100;
     add_header Accept-Range bytes;
+    return 301 https://$host$request_uri;
 
     location / {
     root /usr/share/nginx/html;
