--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -4,19 +4,10 @@ upstream api {
 
 
 server {
-    listen 443 ssl;
+
     listen 80;
     server_name gilyazevs.ru;
-    ssl_certificate /etc/nginx/ssl/gilyazevs.ru.crt;
-    ssl_certificate_key /etc/nginx/ssl/gilyazevs.ru.key;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-    keepalive_timeout 70;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    ssl_prefer_server_ciphers on;
-    ssl_stapling on;
-    ssl_trusted_certificate /etc/nginx/ssl/certificate_ca.crt;
-    resolver 8.8.8.8;
+
     client_max_body_size 100M;
     proxy_force_ranges on;
     max_ranges 100;
@@ -37,7 +28,7 @@ server {
 
     location /api/ {
     proxy_ignore_client_abort on;
-    proxy_pass http://api;
+    proxy_pass https://api;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
     proxy_redirect off;
@@ -45,7 +36,7 @@ server {
 
     location /admin/ {
     proxy_ignore_client_abort on;
-    proxy_pass http://api;
+    proxy_pass https://api;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-Host $server_name;
@@ -66,3 +57,19 @@ server {
 
 
 
+server {
+
+    listen 443 ssl;
+    server_name gilyazevs.ru;
+    ssl_certificate /etc/nginx/ssl/gilyazevs.ru.crt;
+    ssl_certificate_key /etc/nginx/ssl/gilyazevs.ru.key;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    keepalive_timeout 70;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_stapling on;
+    ssl_trusted_certificate /etc/nginx/ssl/certificate_ca.crt;
+    resolver 8.8.8.8;
+
+}
