--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -72,4 +72,50 @@ server {
     ssl_trusted_certificate /etc/nginx/ssl/certificate_ca.crt;
     resolver 8.8.8.8;
 
+
+
+    location / {
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+    try_files $uri $uri/ index.html;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Host $server_name;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_redirect off;
+
+    }
+
+    location /api/ {
+    proxy_ignore_client_abort on;
+    proxy_pass https://api;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_redirect off;
+    }
+
+    location /admin/ {
+    proxy_ignore_client_abort on;
+    proxy_pass https://api;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Host $server_name;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_redirect off;
+    }
+
+
+    location /static/ {
+    alias /usr/share/nginx/static/;
+    }
+
+    location /media/ {
+    alias /usr/share/nginx/media/;
+    }
+
+
+
+
+
+
 }
