--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -14,44 +14,6 @@ server {
     add_header Accept-Range bytes;
     return 301 https://$host$request_uri;
 
-    location / {
-    root /usr/share/nginx/html;
-    index index.html index.htm;
-    try_files $uri $uri/ index.html;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-Host $server_name;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_redirect off;
-
-    }
-
-    location /api/ {
-    proxy_ignore_client_abort on;
-    proxy_pass https://api;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_redirect off;
-    }
-
-    location /admin/ {
-    proxy_ignore_client_abort on;
-    proxy_pass https://api;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-Host $server_name;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_redirect off;
-    }
-
-
-    location /static/ {
-    alias /usr/share/nginx/static/;
-    }
-
-    location /media/ {
-    alias /usr/share/nginx/media/;
-    }
 
 }
 
@@ -88,7 +50,7 @@ server {
 
     location /api/ {
     proxy_ignore_client_abort on;
-    proxy_pass https://api;
+    proxy_pass http://api;
     proxy_ssl_server_name on;
     proxy_ssl_name $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -98,7 +60,7 @@ server {
 
     location /admin/ {
     proxy_ignore_client_abort on;
-    proxy_pass https://api;
+    proxy_pass http://api;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-Host $server_name;
