add proxy_cache for nginx

--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,3 +1,6 @@
+proxy_cache_path /var/cache/nginx/proxy_temp/ levels=1:2 keys_zone=api_cache:10m max_size=100m inactive=600s use_temp_path=off;
+proxy_cache_valid any 60s;
+add_header X-Cache-Status $upstream_cache_status;
 upstream api {
     server  DRF:8000;
 }
@@ -51,6 +54,7 @@ server {
     location /api/ {
     proxy_ignore_client_abort on;
     proxy_pass http://api;
+    proxy_cache api_cache;
     proxy_ssl_server_name on;
     proxy_ssl_name $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
