--- a/backend/back_store/.env.dev
+++ b/backend/back_store/.env.dev
@@ -8,5 +8,5 @@ POSTGRES_DB=store
 POSTGRES_ENGINE=django.db.backends.postgresql_psycopg2
 POSTGRES_USER=dev
 POSTGRES_PASSWORD=Gilyazev123
-POSTGRES_HOST=db
+POSTGRES_HOST=backend_db
 POSTGRES_PORT=5432
