--- a/backend/back_store/requirements.txt
+++ b/backend/back_store/requirements.txt
@@ -4,6 +4,8 @@ Django==4.1.3
 django-cors-headers==3.13.0
 django-filter==22.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+greenlet==2.0.1
 gunicorn==20.1.0
 Pillow==9.3.0
 psycopg2==2.9.5
@@ -15,3 +17,7 @@ pytils==0.4.1
 config==0.5.1
 django-redis==5.2.0
 redis==4.3.5
+PyJWT==2.6.0
+pycparser==2.21
+cryptography==38.0.4
+cffi==1.15.1
