--- a/backend/back_store/requirements.txt
+++ b/backend/back_store/requirements.txt
@@ -23,3 +23,5 @@ cryptography==38.0.4
 cffi==1.15.1
 django-debug-toolbar==3.7.0
 drf-nested-routers==0.93.4
+phonenumbers==8.13.2
+django-phonenumber-field==7.0.1
