--- a/compose/docker-compose_dev_backend.yml
+++ b/compose/docker-compose_dev_backend.yml
@@ -4,7 +4,7 @@ services:
   api:
     build:
       context: ../backend/back_store
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile_dev_backend
     container_name: DRF
     restart: always
     command: bash entrypoint.sh
