--- a/compose/docker-compose_prod.yml
+++ b/compose/docker-compose_prod.yml
@@ -25,7 +25,7 @@ services:
       dockerfile: Dockerfile
     container_name: DRF
     restart: always
-    command: bash entrypoint.sh
+    command: bash entrypoint_prod.sh
     environment:
       - REDIS_HOST=redis
     volumes:
