--- a/backend/back_store/.env.prod
+++ b/backend/back_store/.env.prod
@@ -1,6 +1,16 @@
 DEBUG=0
 SECRET_KEY = 'django-insecure-=%kowmuts&)&47gl9w-pu@tl!%wx@!#b*2zy9ydzbu7_0hu#xd'
 
+DJANGO_ALLOWED_HOSTS = localhost 127.0.0.1  78.24.222.144 [::1]
+
+
+# Data Base
+POSTGRES_DB=store
+POSTGRES_ENGINE=django.db.backends.postgresql_psycopg2
+POSTGRES_USER=dev
+POSTGRES_PASSWORD=Gilyazev123
+POSTGRES_HOST=backend_db
+POSTGRES_PORT=5432
 
 
 
